# OCPA

./: .gitignore  README.md
ECR/ECR/: CMakeLists.txt  README.md  batchedECR.cu  cl.cpp
ECR/ECR/cudnn/: Makefile  README.md  cudnn.cu
ECR/ECR/time_vgg/: batchedECR.cu
ECR/cudnn/: Makefile
ECRv2/: CMakeLists.txt  README.md
ECRv2/include/: cudnn_util.h  ocpa.h  ocpa_cuda.h  util.h
ECRv2/src/: ECR.cu  PECR.cu  cudnn.cu  hello.txt  util.cpp
ECRv2/src/cudnn/: cudnn.cu
ECRv2/test_scripts/: conv_test.py  time_recorder.sh
ECRv2/times_resnet/: batchedECR_times.txt  cuDNN_gemm_times.txt
ECRv2/times_vgg/: cuDNN_gemm_times.txt  singleECR_times.txt
ECRv2/tools/: batchedECR.cpp  singleECR.cpp
OCPA/: CMakeLists.txt  README.md
OCPA/include/: ocpa.h
OCPA/src/: ECR.cu
OCPA/test_scripts/: measurement_cleaner.sh  time_recorder.sh
OCPA/times_resnet/: cuDNN_fft_times.txt  cuDNN_imp_gemm_times.txt  singleECR_times.txt
OCPA/times_vgg/: batchedECR_times.txt  cuDNN_fft_times.txt  cuDNN_imp_gemm_times.txt
OCPA/tools/: batchedOCPA.cpp  singleECR.cpp  singleOCPA.cpp
PECR/cudnn/: Makefile  README.md
PECR/pecr/time_vgg/: batchedPECR.cu
dataset/resnet/: kernel_name.txt
dataset/vggdata/: all_conv_name.txt  kernel_name.txt
speedup/resnet/: cuDNN_fft  cuDNN_gemm.txt  cuDNN_imp_gemm.tx  singleECR.txt  speedup.ipynb
speedup/vgg/: speedup.ipynb
